[project]
name = "issguru"
version = "1.0.0"
description = "ISS pass predictions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "fastapi>=0.115.3",
    "geoip2>=4.8.0",
    "jinja2>=3.1.4",
    "pyephem>=9.99",
    "skyfield>=1.49",
    "uvicorn>=0.32.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "ruff>=0.7.1",
]
